--- a/index.html
+++ b/index.html
@@ -629,6 +629,48 @@ button:hover {
       opacity: 0.8;
     }
 
+    .progress-track {
+      width: 100%;
+      height: 6px;
+      border-radius: 999px;
+      background: #0b1220;
+      border: 1px solid #0f172a;
+      margin-top: 4px;
+      overflow: hidden;
+    }
+    .progress-fill {
+      height: 100%;
+      width: 0%;
+      background: #1d4ed8;
+      border-radius: 999px;
+    }
+    .progress-note {
+      font-size: 10px;
+      opacity: 0.75;
+      margin-top: 2px;
+    }
+
+    @keyframes shopResetPulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.03); opacity: 0.95; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+    .shop-reset-pulse .shop-item {
+      animation: shopResetPulse 700ms ease-in-out 1;
+    }
+    .shop-purchase-badge {
+      display: inline-block;
+      font-size: 10px;
+      padding: 2px 6px;
+      border-radius: 999px;
+      margin-left: 8px;
+      background: #0b3a2a;
+      border: 1px solid #14532d;
+      color: #bbf7d0;
+      opacity: 0.95;
+      white-space: nowrap;
+    }
+
     .tag-complete {
       font-size: 10px;
       padding: 2px 6px;
@@ -1248,7 +1290,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
   <header>
     <div class="header-left">
       <h1>HCSiG</h1>
-      <span class="header-version">v1.6.7.2 (Web)</span>
+      <span class="header-version">v1.6.7.3 (Web)</span>
     </div>
     <div class="header-right">
       <span class="subtitle">Hacking Code Simulator Game</span>
@@ -1618,7 +1660,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
   <div id="toastContainer"></div>
 
   <script>
-    const CURRENT_VERSION = 'v1.6.7.2';
+    const CURRENT_VERSION = 'v1.6.7.3';
     const ENERGY_INTERVAL_MS = 120000; // 에너지 1칸당 120초
     const SAVE_KEY = 'HCSiG_SAVE_v16';
     const OLD_SAVE_KEY = 'HCSiG_SAVE_v15';
@@ -1628,7 +1670,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
     const updateLogs = [
       
       {
-        version: 'v1.6.7.2',
+        version: 'v1.6.7.3',
         lines: [
           'GENERAL 미션을 다수 추가했습니다.',
           '업적을 다수 추가했습니다.',
@@ -2174,7 +2216,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
       { id: 'risk_10_success',      name: '위험한 승부사',     desc: '위험 해킹 모드로 해킹 성공 10회를 달성했습니다.',difficulty: 'hard',  hidden: true  }
 
       ,
-      // v1.6.7.2 추가 업적
+      // v1.6.7.3 추가 업적
       { id: 'scan_100',             name: '스캐너 마스터',      desc: '코드 스캔을 100회 수행했습니다.',             difficulty: 'normal', hidden: false },
       { id: 'hack_100_success',     name: '침입 전문가',        desc: '서버 해킹에 100회 이상 성공했습니다.',        difficulty: 'normal', hidden: false },
       { id: 'cpu_tier_3',           name: '튜너 입문',          desc: 'CPU 티어를 3 이상으로 업그레이드했습니다.',   difficulty: 'easy',   hidden: false },
@@ -2436,7 +2478,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
 
 
     function requiredExp(level) {
-      // v1.6.7.2: 성장 완화 (필요 EXP 곡선 강화)
+      // v1.6.7.3: 성장 완화 (필요 EXP 곡선 강화)
       const lv = Math.max(1, Math.floor(level || 1));
       const linear = 30 + (lv - 1) * 15;
       const curve = Math.floor(((lv - 1) * (lv - 1)) * 0.5);
@@ -2752,8 +2794,12 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
         meta.daily = {}; // reset daily counts
         meta.purchases = {}; // reset daily repeat-purchase counts
         saveShopMeta(meta);
-        log('[시스템] 일일 상점 제한이 초기화되었습니다. (05:00 리셋)', 'system');
+        log('[시스템] 일일 상점 제한 및 가격 배수가 초기화되었습니다. (05:00 리셋)', 'system');
+        showToast('상점 가격 배수 리셋!', 'system');
+        try { window.dispatchEvent(new CustomEvent('shopReset')); } catch (e) {}
       }
+      return meta;
+    }
       return meta;
     }
 
@@ -2777,7 +2823,7 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
     }
 
 
-    // v1.6.7.2: 같은 아이템 일일 3회 이상 중복 구매 시 가격 x2
+    // v1.6.7.3: 같은 아이템 일일 3회 이상 중복 구매 시 가격 x2
     function getRepeatPurchaseCount(itemId) {
       const meta = ensureDailyShopReset();
       return meta.purchases[itemId] || 0;
@@ -3473,10 +3519,16 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
 
         const main = document.createElement('div');
         main.className = 'mission-main';
+                const p = getAchievementProgress(def);
+        const pHtml = p ? `<div class="progress-track"><div class="progress-fill" style="width:${p.percent}%"></div></div><div class="progress-note">${p.text}</div>` : '';
         main.innerHTML = `
-          <div>${def.name}</div>
-          <div class="mission-progress">${def.desc} (${progVal} / ${def.target})</div>
-          <div class="mission-reward">보상: ${def.rewardCredits ? ('크레딧 +' + def.rewardCredits) : ''}${def.rewardEnergyPack ? ((def.rewardCredits ? ' / ' : '') + ('에너지 팩 +' + def.rewardEnergyPack)) : ''}${(!def.rewardCredits && !def.rewardEnergyPack) ? '없음' : ''}</div>
+          <div>
+            ${displayName}
+            <span class="diff-pill ${diffClass}">${diffLabel[def.difficulty] || ''}</span>
+            ${def.hidden ? '<span class="diff-pill" style="background:#4b5563;color:#e5e7eb;">HIDDEN</span>' : ''}
+          </div>
+          <div class="mission-progress">${displayDesc}</div>
+          ${completed ? '' : pHtml}
         `;
 
         const tag = document.createElement('span');
@@ -3536,7 +3588,45 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
       if (state.stats.missionsCompletedTotal >= 10) unlockAchievement('mission_10');
     }
 
-    function renderAchievements() {
+    
+    function getAchievementProgress(def) {
+      // returns {current, target, percent, text} or null if not trackable
+      const id = def.id;
+      const stats = state.stats || {};
+      const map = [
+        ['reach_level3', () => [state.level, 3]],
+        ['reach_level10', () => [state.level, 10]],
+        ['scan_10', () => [stats.scanCount, 10]],
+        ['scan_30', () => [stats.scanCount, 30]],
+        ['scan_50', () => [stats.scanCount, 50]],
+        ['scan_100', () => [stats.scanCount, 100]],
+        ['first_hack_success', () => [stats.hackSuccessCount, 1]],
+        ['hack_30_success', () => [stats.hackSuccessCount, 30]],
+        ['hack_100_success', () => [stats.hackSuccessCount, 100]],
+        ['shop_first_buy', () => [stats.shopPurchaseCount, 1]],
+        ['shop_10', () => [stats.shopPurchaseCount, 10]],
+        ['shop_50', () => [stats.shopPurchaseCount, 50]],
+        ['energy_zero', () => [state.energy <= 0 ? 1 : 0, 1]],
+        ['energy_pack_use_5', () => [stats.energyPacksUsed || 0, 5]],
+        ['energy_pack_use_20', () => [stats.energyPacksUsed || 0, 20]],
+        ['collector_beginner', () => [ownedCodes.length, 3]],
+        ['cpu_tier_3', () => [state.cpuTier, 3]],
+        ['cpu_tier_7', () => [state.cpuTier, 7]],
+        ['energy_max_25', () => [state.energyMax, 25]],
+        ['credits_5000', () => [stats.creditsEarnedTotal || 0, 5000]],
+        ['credits_20000', () => [stats.creditsEarnedTotal || 0, 20000]],
+        ['mission_10', () => [stats.missionsCompletedTotal || 0, 10]],
+      ];
+      const found = map.find(([k]) => k === id);
+      if (!found) return null;
+      const [cur, tgt] = found[1]();
+      const current = Number(cur || 0);
+      const target = Number(tgt || 1);
+      const percent = Math.min(100, (current / target) * 100);
+      return { current, target, percent, text: `${current} / ${target}` };
+    }
+
+function renderAchievements() {
       achievementListEl.innerHTML = '';
 
       const diffLabel = {
@@ -4099,12 +4189,25 @@ body { min-height: var(--app-height); padding-top: var(--safe-top); padding-bott
       addCodeInstanceFromTemplate('basic');
       state.requiredExp = requiredExp(state.level);
       renderServers();
+      // shop reset animation/log hook
+      if (!window.__shopResetHooked) {
+        window.__shopResetHooked = true;
+        window.addEventListener('shopReset', () => {
+          try {
+            renderShop();
+            if (shopList) {
+              shopList.classList.add('shop-reset-pulse');
+              setTimeout(() => shopList.classList.remove('shop-reset-pulse'), 800);
+            }
+          } catch (e) {}
+        });
+      }
       renderShop();
       ensureMissionResets();
       applySettings();
       syncSettingsUI();
       updateStatsUI();
-      log('HCSiG 초기화 완료. (v1.6.7.2)', 'system');
+      log('HCSiG 초기화 완료. (v1.6.7.3)', 'system');
 
       if (localStorage.getItem(SAVE_KEY)) {
         loadGame();
